feat: support for use through jvm -javaagent command line option